<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pongdev.pongdev.StartScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/teamNamePT"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/teamname_TP"
            android:inputType="textPersonName"
            android:textAppearance="@android:style/TextAppearance.SuggestionHighlight" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/player1TB"
                android:layout_width="191dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/player_1_TP"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/player2TB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/player_2_TP"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/addTeamBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addteam" />

            <Button
                android:id="@+id/startBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/start_tournament" />

            <TextView
                android:id="@+id/teamsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
