<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pongdev.pongdev.MatchScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/matchText"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/match"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/teamOneBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/versus" />

            <Button
                android:id="@+id/teamTwoBTN"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/team1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="number" />

            <EditText
                android:id="@+id/team2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_margin="10dp">

            <Button
                android:id="@+id/nextGameBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_game" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
